assets/css/styleguide.scss
---
---

// Imports -------------- //

@import 'lib/bourbon/bourbon';
@import 'lib/neat/neat';
@import 'all';

// Variables -------------- //

$width-nav-sidebar:  250px;
$color-grid-dark:    #727272;
$color-grid-light:   #e3e4e5;

// Generic -------------- //

.tablet-only {
  @media (min-width: $tablet-up + $width-nav-sidebar) {
    display: none !important;
  }
}

// Navigation ------------- //

a#skipnav {
  padding: 10px 15px;
  position: absolute;
  top: -42px;
  left: 0px;
  color: $color-grey-900;
  background: transparent;
  @include transition(top 1s ease-out, background 1s linear);
  z-index: 100;
  &:focus {
    position: absolute;
    left: 0px;
    top: 0px;
    background: white;
    outline: 0;
    @include transition(top .1s ease-in, background .5s linear);
  }
}

header[role="banner"] {
  background-color: $color-grey-900;
  z-index: 1;
  a {
    border-bottom: none;
    color: white;
  }
  nav {
    height: 45px;
    line-height: 45px;
    h1 {
      font-weight: normal;
      float: left;
      line-height: 45px;
      margin: 0;
      padding-left: 20px;
      font-size: $base-font-size * 1.25;
      display: none;
      @include media($tablet-up + $width-nav-sidebar) {
        display: block;
      }
    }
    ul {
      float: right;
      padding-right: 20px;
      display: none;
      li { 
        display: inline; 
        margin-left: 15px;
        font-family: $font-sans;
      }
      @include media($tablet-up + $width-nav-sidebar) {
        display: block;
      }
    }
  }

  .disclaimer {
    padding: .5rem 2rem;
    color: white;
    text-align: center;
    font-size: $base-font-size / 1.25;
    border-bottom: 1px solid $color-grey-700;
    font-weight: 100;
    .us-official { 
      margin: 0;
    }
    .stage {
      a { text-decoration: underline; }
      float: none;
      display: block;
      padding-top: 5px;
    }
    @include media($tablet-up + $width-nav-sidebar) {
      .us-official { 
        margin-left: 177px; 
      }
      .stage { 
        float: right; 
        padding: 0;
      }
    }
  }

}

#menu-btn {
  display: inline;
  padding-left: 20px;
  @include media($tablet-up + $width-nav-sidebar) {
    display: none;
  }
}

#menu-content {
  @media (max-width: $tablet-up + $width-nav-sidebar) {
    $sliding-panel-width: 220px;

    @include position(fixed, 0 auto 0 0);
    @include size($sliding-panel-width 100%);
    @include transform(translateX(- $sliding-panel-width));
    background: #fff;
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
    z-index: 999999;
    display: block;
    &.is-visible {
      @include transition(all 0.25s linear);
      @include transform(translateX(0));
    }
  }
}

.overlay {
  @include position(fixed, 0 0 0 0);
  @include transition;
  background: #000;
  opacity: 0;
  visibility: hidden;
  z-index: 9999;

  &.is-visible {
    visibility: visible;
  }
}

// Based on code by Diego Eis

// Sidebar Nav --------- //

.sidenav {
  position: absolute;
  top: 73px;
  bottom: 0;
  left: 0;
  width: $width-nav-sidebar;
  background-color: $color-grey-50;
  border-right: 1px solid $color-grey-200;
  padding: 5rem 2em 2em;
  overflow: auto;
  display: none;
  z-index: -1;
  .lt-ie9 & {
    width: 25%;
  }

  @include media($tablet-up + $width-nav-sidebar) {
    display: block;
  }

  nav {
    h2, 
    h3 {
      font-size: $h4-font-size;
      font-weight: bold;
      margin: 0;
      padding-bottom: .2em;
    }
    h3 {
      margin: 0;
    }  
    ul {
      color: $color-primary;      
      ul {
        display: none;
        padding: 0;        
        li {
          padding-left: 1em;

          &:before {
            content: "";
            padding-right: 1em;
          }
          &:after {
            margin-bottom: 0;
          }
        }
      }
      li {
        font-family: $font-sans;
        padding: .25em 0;
      }
    }
    a {
      border-bottom: none;
      &:hover {
        border-bottom: 1px solid;
        color: $color-primary-darker;
      }
    }
  }
}

.visual-style .sidenav .visual-style-list {
  ul {
    display: block;
  }
}
.layout-system .sidenav .layout-systems-list {
  ul {
    display: block;
  }
}
.elements .sidenav .elements-list {
  ul {
    display: block;
  }
}
.components .sidenav .components-list {
  ul {
    display: block;
  }
} 

// Main Content --------- //

.main-content {
  position: absolute;
  top: 73px;
  bottom: 0;
  right: 0;
  overflow: auto;
  width: 100%;
  padding: 1em 2em;
  z-index: -1;
  .lt-ie9 & {
    width: 75%;
  }

  @include media($tablet-up + $width-nav-sidebar) {
    width: calc(100% - #{$width-nav-sidebar});
    .lt-ie9 & {
      width: 75%;
    }
  }
}

// Style Guide Content -------- //

.styleguide-content {
  position: relative;
  padding-bottom: 1em;
  > h2, > h3, > p, > ul, > ol {
    max-width: 50rem;
  }
  > h1 {
    border-bottom: 1px solid #000;
    padding-bottom: .5em;
    margin-top: 3.4rem;
    &:not(:first-child) {
      margin-top: 2em;
    }
  }
  @media (min-width: $tablet-up + $width-nav-sidebar) {
    padding: {
      left: 2em;
      right: 2em;
    }
  }
}

// Pattern Preview Boxes -------- //

.preview {
  @include clearfix();
  background-color: #fff;
  margin: {
    top: 2em;
    bottom: 2em;
  }
  padding: 1em $site-margins;
  border: 1px solid $color-grey-200;
  .is-peripheral {
    opacity: .2;
  }
}

// Code Sample Boxes --------- //

.code-snippets {

  .code-snippet-button:after {
    content: "\25be  hide code";
  }

  &.hidden {

    table {
      display: none;
    }
    
    .code-snippet-button:after {
      content: "\25b8  show code";
    }
  }

  table {

    table-layout: fixed;
    width: 100%;
    padding: 3em 0 0 0;

    td {
      background-color: $color-grey-100;
      border: 1px solid $color-grey-300;
      position: relative;
      vertical-align: top;

      .code-copy-button {
        border-radius: 0;
        position: absolute;
        margin: 0;
        right: 0;
        top: 0;

        &:hover {
          background-color: $color-grey-900;
        }
      }
    }

    th {
      border: none;
      text-align: left;
    }

    pre, code {
      direction: ltr;
      text-align: left;
      white-space: pre;
      word-spacing: normal;
      word-break: normal;
    }

    pre {
      padding: 0 1em 1em 1em;
    }

    code {
      font-size: $base-font-size / 1.5;
      line-height: 1.4em;
      word-wrap: break-word;
      
      &.language-html {
        max-width: 25em;
      }
    }
  }
}

// Download Code Boxes --------- //

.download-code {
  padding-top: 3em;
}

// Search bar grid --------- //

.preview-search-bar {
  .usa-grid-box {
    padding: 0;
  }
}

// Custom styles to illustrate invisible grid for pattern library

.usa-grid-box-example {
  background: $color-grid-light;

  > * {
    color: $color-white;
    padding: 1em;
    background: $color-grid-dark;
    margin: {
      top: .5em;
      bottom: .5em;
    }
    text-align: center;
  }

  .usa-width-one-twelfth {
    @include media($tablet-up) {
      padding: {
        left: 0;
        right: 0;
      }
    }
  }
}

.usa-grid-box-text {
  background: $color-grid-dark;

  > * {
  background: $color-grid-light;
  color: $color-base-link;
  }

  h3 {
    margin-top: 0;
  }

  p {
    margin-bottom: 0;
  }
}

